--- a/frontend/styles/external.less
+++ b/frontend/styles/external.less
@@ -1,4 +1,5 @@
 @import "../node_modules/bootstrap/less/bootstrap.less";
 @import "../node_modules/font-awesome/less/font-awesome.less";
+@import "../node_modules/openlayers/css/ol.css";
 
 @fa-font-path: "fonts";
