--- a/frontend/styles/events.less
+++ b/frontend/styles/events.less
@@ -2,6 +2,7 @@
     padding: 10px;
     margin: 5px;
     border-radius: 5px;
+    border: 1px solid #aaa;
     position: relative;
     cursor: pointer;
 }
@@ -17,7 +18,7 @@
     background-color: #FFB562;
 }
 
-.event .price .free {
+.event .price.free {
     background-color: #3C9142;
 }
 
