--- a/frontend/styles/default.less
+++ b/frontend/styles/default.less
@@ -4,3 +4,35 @@ body { padding-top: 50px; }
     line-height: 50px;
     font-size: 20px;
 }
+
+/** Left collapse sidebar **/
+@navbar-collapse-max-height:       100vh;
+
+.navbar-toggle {
+    float: left;
+    margin-left: 15px;
+    margin-right: 0px;
+}
+
+#main-menu.open {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+#main-menu.open .navbar-header {
+    background-color: @gray-lighter;
+}
+
+.navbar-collapse {
+    background-color: @gray-lighter;
+    height: 100vh;
+    width: 70%;
+}
+
+.collapsing {
+    background-color: @gray-lighter;
+    height: 100vh;
+    width: 0;
+    .transition-property(~"width, visibility");
+    .transition-duration(.35s);
+    .transition-timing-function(ease);
+}
