--- a/frontend/styles/default.less
+++ b/frontend/styles/default.less
@@ -59,3 +59,19 @@ body { padding-top: 50px; }
 #qr-canvas {
     width: 100%;
 }
+
+.btn-fixed-bottom {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 70px;
+}
+
+.loadingIcon {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    margin-top: -20px;
+}
