frontend: Styling event list

--- a/frontend/styles/default.less
+++ b/frontend/styles/default.less
@@ -44,3 +44,15 @@ body { padding-top: 50px; }
     top: 50%;
     margin-top: -20px;
 }
+
+.container-fw {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.btn-circle {
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    border-radius: 50px;
+}
