--- a/frontend/styles/events.less
+++ b/frontend/styles/events.less
@@ -2,8 +2,7 @@
 .event {
     padding: 10px;
     margin: 5px;
-    border-radius: 5px;
-    border: 1px solid #aaa;
+    border-bottom: 1px solid #aaa;
     position: relative;
     cursor: pointer;
 }
@@ -13,9 +12,6 @@
 }
 
 .event .price {
-    position: absolute;
-    top: 10px;
-    right: 10px;
     background-color: #FFB562;
 }
 
@@ -23,8 +19,10 @@
     background-color: #3C9142;
 }
 
-.event .max {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
+.eventname {
+    padding-left: 10px;
+}
+
+.eventdesc {
+    padding-top: 10px;
 }
