frontend: a little style change

--- a/frontend/styles/default.less
+++ b/frontend/styles/default.less
@@ -56,3 +56,20 @@ body { padding-top: 50px; }
     text-align: center;
     border-radius: 50px;
 }
+
+textarea.form-control,
+input[type=text],
+input[type=email],
+input[type=password] {
+    margin-top: 10px;
+    border-radius: 0px;
+    font-size: large;
+    line-height: 20px;
+    padding:10px;
+    height: auto;
+}
+
+.input-group-btn .btn {
+    padding: 10px;
+    margin-top: 10px;
+}
