--- a/frontend/styles/vars.less
+++ b/frontend/styles/vars.less
@@ -2,3 +2,7 @@
 @menu-color: #cc0110;
 @menu-text: white;
 
+@border-radius-base:        0px;
+@border-radius-large:       0px;
+@border-radius-small:       0px;
+
