--- a/frontend/styles/default.less
+++ b/frontend/styles/default.less
@@ -73,3 +73,8 @@ input[type=password] {
     padding: 10px;
     margin-top: 10px;
 }
+
+.search .input-group-btn .btn {
+    margin-top: 0px;
+    padding: 6px;
+}
