--- a/frontend/styles/map.less
+++ b/frontend/styles/map.less
@@ -3,5 +3,14 @@
 }
 
 #qrcode canvas {
-    margin-top: 40px;
+    margin-top: 80px;
+}
+
+#qrcode .closebtn {
+    position: absolute;
+    right: 10px;
+    top: 50px;
+    width: 40px;
+    height: 40px;
+    font-size: 40px;
 }
