--- a/frontend/styles/navbar.less
+++ b/frontend/styles/navbar.less
@@ -59,4 +59,13 @@
     height: 100vh;
     padding: 0px;
     box-shadow: 1px 0px 7px black;
+
+    animation-name: leftRight;
+    animation-duration: .5s;
+    animation-timing-function: ease-in;
+}
+
+@keyframes leftRight {
+    0%   { width: 50%; }
+    100% { width: 80%; }
 }
