frontend: styling events

--- a/frontend/styles/events.less
+++ b/frontend/styles/events.less
@@ -2,7 +2,7 @@
 .event {
     padding: 10px;
     margin: 5px;
-    border-bottom: 1px solid #aaa;
+    border-bottom: 1px dashed #ccc;
     position: relative;
     cursor: pointer;
 }
@@ -25,4 +25,12 @@
 
 .eventdesc {
     padding-top: 10px;
+}
+
+.dates, .start, .end {
+    margin: 5px;
+}
+
+.event.joined {
+    background-color: @brand-info;
 }
