Added sonarqube test and coverage.

--- a/backend/templates/oauth2callback.html
+++ b/backend/templates/oauth2callback.html
@@ -1,4 +1,8 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <title>oauth2 callback</title>
+    </head>
     <body>
         <script>
             location.href = location.href.replace('#', '?');
