--- a/frontend/styles/map.less
+++ b/frontend/styles/map.less
@@ -43,3 +43,9 @@
     font-size: x-large;
     border-bottom: 1px solid white;
 }
+
+#center-button {
+    position: fixed;
+    top: 70px;
+    right: 10px;
+}
