frontend: Starting to implement connection in a diferent view

--- a/frontend/styles/default.less
+++ b/frontend/styles/default.less
@@ -29,6 +29,15 @@ body { padding-top: 50px; }
     height: 40px;
 }
 
+.closebtn {
+    position: absolute;
+    right: 10px;
+    top: 50px;
+    width: 40px;
+    height: 40px;
+    font-size: 40px;
+}
+
 #qr-video {
     display: none;
 }
