frontend: Showing only one clue after capture

--- a/frontend/styles/default.less
+++ b/frontend/styles/default.less
@@ -54,6 +54,22 @@ body { padding-top: 50px; }
     height: 70px;
 }
 
+.btn-fixed-bottom-left {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 50%;
+    height: 70px;
+}
+
+.btn-fixed-bottom-right {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 50%;
+    height: 70px;
+}
+
 .loadingIcon {
     width: 100%;
     text-align: center;
@@ -94,4 +110,8 @@ input[type=password] {
 .search .input-group-btn .btn {
     margin-top: 0px;
     padding: 6px;
+}
+
+.mbottom {
+    margin-bottom: 70px;
 }
