--- a/backend/editor/templates/editor/forms/challenge.html
+++ b/backend/editor/templates/editor/forms/challenge.html
@@ -3,12 +3,12 @@
 <div class="row">
     <div class="col-sm-6">
         <div class="form-group">
-            <input type="text" class="form-control" name="challenge_name_{{ n }}"
+            <input type="text" class="form-control name" name="challenge_name_{{ n }}"
                    placeholder="{% trans 'Challenge name' %}"/>
         </div>
         <!--
         <div class="form-group">
-            <input type="text" class="form-control" name="challenge_solution_{{ n }}"
+            <input type="text" class="form-control solution" name="challenge_solution_{{ n }}"
                    placeholder="{% trans 'Game solution' %}"/>
             <p class="help-block">{% trans "Write here the solution" %}</p>
         </div>
@@ -17,7 +17,7 @@
 
     <div class="col-sm-6">
         <div class="form-group">
-            <textarea class="form-control" name="challenge_desc_{{ n }}"
+            <textarea class="form-control desc" name="challenge_desc_{{ n }}"
                    placeholder="{% trans 'Challenge description' %}"></textarea>
             <p class="help-block">{% trans "You can use here html" %}</p>
         </div>
@@ -28,7 +28,7 @@
     <div class="col-sm-6">
         <div class="form-group">
             <label for="type">{% trans "Challenge type:" %}</label>
-            <select id="type" name="challenge_type_{{ n }}">
+            <select id="type" class="type" name="challenge_type_{{ n }}">
                 <option value="player">{% trans "Player" %}</option>
                 <option value="ia">{% trans "Position (ia)" %}</option>
                 <option value="actor">{% trans "Actor" %}</option>
@@ -37,7 +37,7 @@
     </div>
     <div class="col-sm-6">
         <div class="form-group">
-            <input type="text" class="form-control"
+            <input type="text" class="form-control pos"
                    name="challenge_pos_{{ n }}"
                    placeholder="{% trans 'IA position in format: Lon, Lat' %}"/>
             <p class="help-block">{% trans "for example: -5.9866369, 37.3580539" %}</p>
