backend: Showing current game data when editing

--- a/backend/editor/templates/editor/edit_game.html
+++ b/backend/editor/templates/editor/edit_game.html
@@ -25,7 +25,11 @@
     <form method="POST" action="">
         {% csrf_token %}
 
-        {% include "editor/forms/game.html" %}
+        {% if game and not data %}
+            {% include "editor/forms/game.html" with data=game %}
+        {% else %}
+            {% include "editor/forms/game.html" %}
+        {% endif %}
 
         {% for challenge in game.challenges.all %}
         <div class="well">
