--- a/backend/editor/templates/editor/edit_event.html
+++ b/backend/editor/templates/editor/edit_event.html
@@ -50,5 +50,14 @@
 {% block extrabody %}
     <script src="{% static "vendors/ol/ol.js" %}"></script>
     <script src="//cdn.jsdelivr.net/openlayers.geocoder/latest/ol3-geocoder.js"></script>
+
+    <script>
+        {% if ev.place %}
+            var evplace = {{ ev.place.geojson|safe }};
+        {% else %}
+            var evplace = null;
+        {% endif %}
+    </script>
+
     <script src="{% static "edit_event.js" %}"></script>
 {% endblock %}
