editor: Setting name to mapinput field to send the event place

--- a/backend/editor/templates/editor/forms/ev.html
+++ b/backend/editor/templates/editor/forms/ev.html
@@ -72,7 +72,7 @@
         <label>{% trans "Event place" %}</label>
         <button class="btn btn-danger pull-right" id="clearmap">{% trans "Clear" %}</button>
         <p class="help-block">{% trans "Select a region where the event take place" %}</p>
-        <input type="hidden" value="{{ data.place }}" id="mapinput" />
+        <input type="hidden" value="" id="mapinput" name="ev_place"/>
         <div id="map" class="map"></div>
     </div>
 </div>
