--- a/backend/editor/templates/editor/event_challenges.html
+++ b/backend/editor/templates/editor/event_challenges.html
@@ -19,23 +19,49 @@
         <h2> {% trans "Actors / IA" %} </h2>
         <div class="challenges">
         {% for c in actors %}
-            <div>
-                {{ c.name }}
-                <p class="text-muted">{{ c.desc }}</p>
+            <div class="row">
+                <div class="col-sm-5">
+                    {{ c.name }}
+                    <p class="text-muted">{{ c.desc }}</p>
+                </div>
 
-                <div class="form-group">
-                    <div class="input-group">
-                        <span class="input-group-btn">
-                            <button class="btn btn-primary mapbtn">
-                                <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
-                            </button>
-                        </span>
-                        <input type="text" class="form-control pos"
-                               name="challenge_pos_{{ n }}"
-                               value="{{ challenge.pos }}"
-                               placeholder="{% trans 'IA position in format: Lat, Lon' %}"/>
+                <!-- TODO fill the values with the previous assignation if
+                     exists -->
+                <div class="col-sm-2 text-right">
+                    <div class="form-group">
+                        <select class="from-control ctype" data-id="{{ c.id }}" name="challenge_type_{{ c.id }}">
+                            <option value="ia">{% trans "IA" %}</option>
+                            <option value="actor">{% trans "Actor" %}</option>
+                        </select>
                     </div>
-                    <p class="help-block">{% trans "for example: 37.3580539, -5.9866369" %}</p>
+                </div>
+                <div class="col-sm-5">
+                    <div class="form-group" id="ia_{{ c.id }}">
+                        <div class="input-group">
+                            <span class="input-group-btn">
+                                <button class="btn btn-primary mapbtn">
+                                    <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
+                                </button>
+                            </span>
+                            <input type="text" class="form-control pos"
+                                   name="challenge_pos_{{ c.id }}"
+                                   value=""
+                                   placeholder="{% trans 'IA position in format: Lat, Lon' %}"/>
+                        </div>
+                        <p class="help-block">{% trans "Position, only if it's an IA. For example: 37.3580539, -5.9866369" %}</p>
+                    </div>
+                    <div class="form-group" id="actor_{{ c.id }}">
+                        <div class="input-group">
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                            </span>
+                            <input type="text" class="form-control player"
+                                   name="challenge_player_{{ c.id }}"
+                                   value=""
+                                   placeholder="{% trans 'Player name' %}"/>
+                        </div>
+                        <p class="help-block">{% trans "Player name, to assign this challenge. If not exists, we'll create a new one" %}</p>
+                    </div>
                 </div>
             </div>
         {% empty %}
@@ -80,5 +106,5 @@
 {% block extrabody %}
     <script src="{% static "vendors/ol/ol.js" %}"></script>
     <script src="//cdn.jsdelivr.net/openlayers.geocoder/latest/ol3-geocoder.js"></script>
-    <script src="{% static "edit_game.js" %}"></script>
+    <script src="{% static "event_challenges.js" %}"></script>
 {% endblock %}
