--- a/backend/editor/templates/editor/base.html
+++ b/backend/editor/templates/editor/base.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+    <link rel="shortcut icon" href="{% static "img/favicon.ico" %}" />
+
     <title>Socializa - {% block title %}{% trans "Editor" %}{% endblock %}</title>
 
     <!-- Bootstrap -->
