editor: Added editor view to link to game and event edits

--- a/backend/editor/templates/editor/base.html
+++ b/backend/editor/templates/editor/base.html
@@ -41,6 +41,12 @@
             </div>
         {% endif %}
 
+        <ol class="breadcrumb">
+        {% block breadcrumb %}
+            <li><a href="{% url 'editor' %}">{% trans "Editor" %}</a></li>
+        {% endblock %}
+        </ol>
+
         {% block content %}
         {% endblock %}
 
