frontend: Fixed interface with translations

--- a/frontend/styles/default.less
+++ b/frontend/styles/default.less
@@ -76,6 +76,7 @@ body { padding-top: 50px; }
     position: absolute;
     top: 50%;
     margin-top: -20px;
+    margin-left: -15px;
 }
 
 .container-fw {
