frontend: Using Amaranth font as header font

--- a/frontend/styles/default.less
+++ b/frontend/styles/default.less
@@ -1,5 +1,11 @@
 body { padding-top: 50px; }
 
+.socializa-title,
+.btn,
+h1, h2, h3, h4 {
+    font-family: 'Amaranth', sans-serif;
+}
+
 .socializa-title {
     line-height: 50px;
     font-size: 20px;
