--- a/frontend/styles/map.less
+++ b/frontend/styles/map.less
@@ -19,6 +19,7 @@
     animation-name: bottomTop;
     animation-duration: .5s;
     animation-timing-function: ease-in;
+    font-family: 'Amaranth', sans-serif;
 }
 
 @keyframes bottomTop {
