--- a/backend/landing/static/landing/css/styles.css
+++ b/backend/landing/static/landing/css/styles.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700);
+@import url("https://fonts.googleapis.com/css?family=Amaranth");
 .backgroundCover, #slider, section#how, section#download, section#packages, section#subscribe, footer {
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -7,6 +8,10 @@
 
 body {
   font-family: "Open Sans", Tahoma, Arial; }
+
+.btn,
+h1, h2, h3, h4 {
+  font-family: 'Amaranth', sans-serif; }
 
 header {
   color: #000000; }
