--- a/backend/landing/static/landing/sass/styles.scss
+++ b/backend/landing/static/landing/sass/styles.scss
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700);
+@import url('https://fonts.googleapis.com/css?family=Amaranth');
 
 //Colors
 $brand-primary : 		#de5749;
@@ -172,6 +173,11 @@ $borderDark : 1px solid $gray-dark;
 
 body{
 	font-family:$font-stack;
+}
+
+.btn,
+h1, h2, h3, h4 {
+    font-family: 'Amaranth', sans-serif;
 }
 
 header {
