--- a/backend/landing/templates/landing/index.html
+++ b/backend/landing/templates/landing/index.html
@@ -782,12 +782,20 @@
                         <div class="section-heading scrollpoint sp-effect3">
                             <h3>Socializa<span> {% trans "get in touch" %}</span></h3>
                             <span class="divider"></span>
-                            <p>{% blocktrans %}You can ask you something or send us a message with the following form or directly sending an email to socializa@wadobo.com{% endblocktrans %}</p>
+                            <p>{% blocktrans %}You can ask us something or send us a message with the following form or directly sending an email to socializa@wadobo.com{% endblocktrans %}</p>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <form role="form" method="POST" action="">
                         {% csrf_token %}
+                            <div class="col-md-6">
+                                <h3>{% trans "Contact us if:" %}</h3>
+                                <ul>
+                                    <li>{% trans "You organize an event and want to prepare a game for it" %}</li>
+                                    <li>{% trans "You're a writter and want to create stories and games" %}</li>
+                                    <li>{% trans "You want to collaborate in the development, translations, etc." %}</li>
+                                </ul>
+                            </div>
                             <div class="col-md-6">
                                 <div class="row">
                                     <div class="col-md-6 spirat">
