--- a/backend/editor/templates/editor/base.html
+++ b/backend/editor/templates/editor/base.html
@@ -1,76 +1,13 @@
+{% extends "base.html" %}
 {% load i18n %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <link rel="shortcut icon" href="{% static "img/favicon.ico" %}" />
+{% block title %}{% trans "Editor" %}{% endblock %}
 
-    <title>Socializa - {% block title %}{% trans "Editor" %}{% endblock %}</title>
-
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="{% static "vendors/bootstrap/css/bootstrap.min.css" %}" />
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    {% block extrahead %}{% endblock %}
-  </head>
-  <body>
-    <div class="container">
-        {% block head %}
-        {% endblock %}
-        <hr/>
-
-        {% if messages %}
-            <div class="messages">
-                {% for message in messages %}
-                    <div{% if message.tags %} class="alert alert-dismissable alert-{{ message.tags }}"{% endif %}>
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        {{ message }}
-                    </div>
-                {% endfor %}
-            </div>
-        {% endif %}
-
-        <ol class="breadcrumb">
-        {% block breadcrumb %}
-            <li><a href="{% url 'editor' %}">{% trans "Editor" %}</a></li>
-        {% endblock %}
-        </ol>
-
-        {% block content %}
-        {% endblock %}
-
-        {% block foot %}
-        {% endblock %}
-    </div>
-
-    <script src="{% static "vendors/jquery.min.js" %}"></script>
-    <script src="{% static "vendors/bootstrap/js/bootstrap.min.js" %}"></script>
-
-    <!-- Bootstrap Date-Picker Plugin -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment-with-locales.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css"/>
-
-<script>
-    $(document).ready(function(){
-        $(".datetimepicker").datetimepicker({
-            format: 'YYYY-MM-DD HH:mm',
-            sideBySide: true
-        });
-    })
-</script>
-
-    {% block extrabody %}{% endblock %}
-  </body>
-</html>
+{% block precontent %}
+<ol class="breadcrumb">
+{% block breadcrumb %}
+    <li><a href="{% url 'editor' %}">{% trans "Editor" %}</a></li>
+{% endblock %}
+</ol>
+{% endblock %}
