--- a/frontend/styles/default.less
+++ b/frontend/styles/default.less
@@ -44,6 +44,15 @@ h1, h2, h3, h4 {
     font-size: 40px;
 }
 
+.goback {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    width: 40px;
+    height: 40px;
+    font-size: 40px;
+}
+
 #qr-video {
     display: none;
 }
