frontend: migrating from gulp+browserify to webpack

--- a/frontend/styles/app.less
+++ b/frontend/styles/app.less
@@ -1,4 +1,4 @@
-@import "../node_modules/openlayers/css/ol.css";
+@import (inline) "../node_modules/openlayers/css/ol.css";
 
 @import "external.less";
 @import "default.less";
@@ -9,4 +9,4 @@
 @import "connect.less";
 
 @import "vars.less";
-@import url('https://fonts.googleapis.com/css?family=Amaranth');
+@import (inline) url('https://fonts.googleapis.com/css?family=Amaranth');
