--- a/backend/player/templates/register/confirmed.html
+++ b/backend/player/templates/register/confirmed.html
@@ -18,7 +18,7 @@
 
 {% block foot %}
 <center>
-    <a href="https://socializa.wadobo.com">
+    <a href="https://devsocializa.wadobo.com">
         <img src="{% static 'landing/img/logo.png' %}" alt="socializa"/>
         <br/>
         Socializa
