--- a/frontend/styles/default.less
+++ b/frontend/styles/default.less
@@ -118,7 +118,7 @@ input[type=password] {
     height: auto;
 }
 
-.input-group-btn .btn {
+.search .input-group-btn .btn {
     padding: 10px;
     margin-top: 10px;
 }
