--- a/frontend/styles/events.less
+++ b/frontend/styles/events.less
@@ -1,3 +1,10 @@
+table, tr, th, td {
+    border: 1px solid black;
+    text-align: center;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
 .clue,
 .event {
     padding: 10px;
