--- a/backend/editor/templates/editor/event_challenges.html
+++ b/backend/editor/templates/editor/event_challenges.html
@@ -24,7 +24,7 @@
             <div class="row">
                 <div class="col-sm-5">
                     {{ c.name }}
-                    <p class="text-muted">{{ c.desc }}</p>
+                    <p class="text-muted">{{ c.get_desc_html|safe }}</p>
                 </div>
 
                 <!-- TODO fill the values with the previous assignation if
