frontned: Using alertify for alerts

--- a/frontend/styles/external.less
+++ b/frontend/styles/external.less
@@ -1,4 +1,7 @@
 @import "../node_modules/bootstrap/less/bootstrap.less";
 @import "../node_modules/font-awesome/less/font-awesome.less";
 
+@import (less) "../node_modules/alertifyjs/build/css/alertify.min.css";
+@import (less) "../node_modules/alertifyjs/build/css/themes/bootstrap.min.css";
+
 @fa-font-path: "fonts";
