frontend: Showing confirmation prompt on event leave

--- a/frontend/styles/default.less
+++ b/frontend/styles/default.less
@@ -131,3 +131,7 @@ input[type=password] {
 .mbottom {
     margin-bottom: 70px;
 }
+
+.alertify .ajs-dimmer, .alertify .ajs-modal {
+    z-index: 10000 !important;
+}
