--- a/backend/landing/templates/landing/index.html
+++ b/backend/landing/templates/landing/index.html
@@ -177,7 +177,7 @@
                 <!--/.container -->
             </div>
             <!--/.navbar -->
-            
+
         </header>
 
         <section id="features">
@@ -355,7 +355,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="btn-group btn-group-justified btn-lg">
                         <div class="row">
                             <div class="col-md-4 col-sm-4">
@@ -364,7 +364,7 @@
                                         <a href="#" class="btn btn-default">
                                             <span class="appstore"></span>
                                         </a>
-                                    </div>  
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-4 col-sm-4">
@@ -373,7 +373,7 @@
                                         <a href="#" class="btn btn-default">
                                             <span class="playstore"></span>
                                         </a>
-                                    </div>  
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-4 col-sm-4">
@@ -382,7 +382,7 @@
                                         <a href="#" class="btn btn-default">
                                             <span class="micstore"></span>
                                         </a>
-                                    </div>  
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -506,9 +506,9 @@
                             <a class="car-next" href="#carousel-team" role="button" data-slide="next">
                                 <i class="fa fa-chevron-right fa-2x"></i>
                             </a>
-                        </div>                 
+                        </div>
                     </div>
-                
+
                     <div class="carousel-inner">
                         <div class="item active">
                             <div class="col-md-6">
@@ -766,7 +766,7 @@
                             <li>
                                 <h3>{{ ev.name }}</h3>
                                 <h4>{{ ev.start_date }} - {{ ev.end_date }}</h4>
-                                <p><strong>{{ ev.game.name }}</strong> / {{ ev.game.desc }}</p>
+                                <p><strong>{{ ev.game.name }}</strong> / {{ ev.game.get_desc_html|safe }}</p>
                             </li>
                             {% endfor %}
                         </ul>
