--- a/backend/editor/templates/editor/edit_game.html
+++ b/backend/editor/templates/editor/edit_game.html
@@ -37,8 +37,8 @@
 
 {% block extrabody %}
     <script src="{% static "vendors/ol/ol.js" %}"></script>
+    <script src="{% static "vendors/tinymce/tinymce.min.js" %}"></script>
     <script src="//cdn.jsdelivr.net/openlayers.geocoder/latest/ol3-geocoder.js"></script>
-    <script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
     <script src="{% static "vendors.js" %}"></script>
     <script src="{% static "gameeditor.js" %}"></script>
 {% endblock %}
