editor: Added challenge form and dependencies

--- a/backend/editor/templates/editor/edit_game.html
+++ b/backend/editor/templates/editor/edit_game.html
@@ -12,6 +12,7 @@
 {% endblock %}
 
 {% block extrahead %}
+    <link rel="stylesheet" href="{% static "gameeditor.css" %}" />
     <link rel="stylesheet" href="{% static "vendors/ol/ol.css" %}" />
     <style>
         .map {
