editor: Added the graph view

--- a/backend/editor/templates/editor/edit_game.html
+++ b/backend/editor/templates/editor/edit_game.html
@@ -40,6 +40,7 @@
     <script src="{% static "vendors/ol/ol.js" %}"></script>
     <script src="{% static "vendors/tinymce/tinymce.min.js" %}"></script>
     <script src="//cdn.jsdelivr.net/openlayers.geocoder/latest/ol3-geocoder.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/cytoscape/3.1.1/cytoscape.min.js"></script>
     <script src="{% static "vendors.js" %}"></script>
     <script src="{% static "gameeditor.js" %}"></script>
 {% endblock %}
